// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabbedFiltersPanel Brand components Given a Container should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 2.75rem;
  margin: 0.75rem 0.75rem 0.5rem 0.75rem;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`tabbedFiltersPanel Brand components Given a Form should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  border: .0625rem solid #9e9e9e;
}

.c0:focus-within {
  outline: 2px solid #1d89dd;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`tabbedFiltersPanel Brand components Given a Icon should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
}

<img
    class="c0"
  />
</DocumentFragment>
`;

exports[`tabbedFiltersPanel Brand components Given a Input Field should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  font-size: 1rem;
}

.c0 input::-ms-clear {
  display: none;
}

<div
    class="MuiInputBase-root c0"
  >
    <input
      class="MuiInputBase-input"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`tabbedFiltersPanel Brand components Given a Search Icon should render the component correctly to match the snapshot 1`] = `
<DocumentFragment>
  .c0.c0 {
  width: 2.25rem;
  width: 2.25rem;
  padding: 0;
  margin: 0 0.125rem;
  background: #fff;
  min-width: auto;
}

.c0.c0:hover,
.c0.c0:active {
  background: #fff;
  border: 0;
}

.c0.c0:focus {
  border: 0;
  border-radius: 0;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
